testsuite/poke.pkl/struct-ind-diag-3.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    offset<uint<32>,B> foo;
  };

(Foo {})->foo; /* { dg-error "referring offset" } */
